# coro

./: CHANGELOG.md  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-06-12-qt-fiber-coroutine.md  2026-06-16-awaitable.md  2026-06-18-iodevice-generator.md
docs/superpowers/specs/: 2026-06-12-qt-fiber-coroutine-design.md  2026-06-16-awaitable-design.md  2026-06-18-iodevice-generator-design.md  2026-06-22-qt-round-robin-design.md
examples/: CMakeLists.txt  basic_signal.cpp  future_demo.cpp
include/coro/: awaitable.h  core.h  coro.h  future.h  iodevice.h  network.h  process.h  qt_round_robin.h  qt_scheduler.h  signal.h  sync_channel.h  task.h  when.h
src/: core.cpp
tests/: CMakeLists.txt  test_awaitable.cpp  test_driver.cpp  test_future.cpp  test_iodevice.cpp  test_iodevice_socket.cpp  test_network.cpp  test_process.cpp  test_resolve_crash.cpp  test_round_robin.cpp  test_sched_crash.cpp  test_signal.cpp  test_sleep.cpp  test_sync_awaitable.cpp  test_task.cpp  test_when.cpp
