function(add_qfcoro_test name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE qfcoro Qt5::Core Qt5::Test Qt5::Concurrent)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_qfcoro_test(test_driver)
add_qfcoro_test(test_sleep)
add_qfcoro_test(test_signal)
add_qfcoro_test(test_task)
add_qfcoro_test(test_when)
add_qfcoro_test(test_future)
add_qfcoro_test(test_iodevice)
add_qfcoro_test(test_process)
