function(add_qfcoro_test name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE qfcoro Qt5::Core Qt5::Test Qt5::Concurrent)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_qfcoro_test(test_driver)
add_qfcoro_test(test_sleep)
add_qfcoro_test(test_signal)
add_qfcoro_test(test_awaitable)
add_qfcoro_test(test_sync_awaitable)
add_qfcoro_test(test_resolve_crash)
add_qfcoro_test(test_sched_crash)
add_qfcoro_test(test_round_robin)
add_qfcoro_test(test_task)
add_qfcoro_test(test_when)
add_qfcoro_test(test_future)
add_qfcoro_test(test_iodevice)
add_qfcoro_test(test_iodevice_socket)
target_link_libraries(test_iodevice_socket PRIVATE Qt5::Network)
add_qfcoro_test(test_process)
add_qfcoro_test(test_network)
target_link_libraries(test_network PRIVATE Qt5::Network)
